--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,21 @@
   font-family: "Euclid-Circular-A";
 }
 
+.custom-scrollbar::-webkit-scrollbar {
+  height: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #001e2b;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #3d4f58;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #71f6ba;
+}
+
